@@ -10,11 +10,6 @@ Currently config reading is pretty ugly :(
 Also need to add the ENV options too - should be able to get the
 values from environment.
 
-14/11/2014
-Need to add the remove_ functions to cbcpart as we cannot remove
-partitions nor schemes.
-*** FIXED: 0.2.18.9.2 15/11/2014 ***
-
 26/10/2014
 It seems that we add the disk device when we add a server build regardless
 of whether or not we are successful in adding the server build. This needs
